<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="24dp"
        android:background="@color/color_background"
        android:elevation="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/content_description_profile"
                android:src="@drawable/ic_profile"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/color_divider"/>

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/app_name"
                android:textColor="@color/color_text_brand"
                android:textSize="24sp"
                android:letterSpacing="-0.02" />

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/content_description_notification"
                android:src="@drawable/ic_notification" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="56dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/include_balance_card"
                layout="@layout/layout_balance_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp" />

            <include
                layout="@layout/layout_quick_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp" />

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_main_card"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingTop="32dp"
                android:paddingBottom="120dp">

                <include
                    android:id="@+id/include_history"
                    layout="@layout/layout_recent_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <include
                    android:id="@+id/include_empty_state"
                    layout="@layout/layout_empty_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_white"
        android:elevation="12dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>